# hermadata

./: .gitignore  CLAUDE.md  LICENCE  README.md  ecosystem.config.js  hermadata.code-workspace  improved-frontend-deployment.yml
backend/: .coverage  LICENSE  MANIFEST.in  README.md  alembic.ini  changelog  create_test_user.py  deploy.sh  pyproject.toml  tailwind.config.js
backend/.github/: copilot-instructions.md
backend/.github/instructions/: backend.instructions.md
backend/hermadata/: __init__.py  constants.py  dependancies.py  error_handlers.py  errors.py  initializations.py  log-configs.json  main.py  models.py  permissions.py  settings.py  time_utils.py  utils.py
backend/hermadata/database/: models.py
backend/hermadata/database/alembic/: env.py  import_initial_data.py
backend/hermadata/database/alembic/inital_data/: breeds.csv
backend/hermadata/database/alembic/initial_data/: animal_events.csv  comuni.csv  doc-kinds.csv  permissions.csv  province.csv  races.csv  role-permissions.csv  roles.csv
backend/hermadata/database/alembic/versions/: 10ce94b1b1c0_extract_animal_events.py  12a20b0bf3d3_add_doc_kind_uploadable_rendered_flags.py  1bb12e9dcab1_races.py  1f35a2e5d4f1_initial_tables.py  305dd8d0e1fb_inital.py  368a2d2d72fd_document_kind_code_3_characters.py  38979c9ad66f_initial_tables.py  3bebd7731267_comuni_and_province.py  45abcad6b93d_add_without_chip_to_animal_entry.py  4794e65a82b4_add_city_codes_to_users.py  60bd24dc572c_add_therapy_tables.py  6e88a0cde6f9_add_user_id_to_animal_log_table.py  6ebfc1ffc63b_roles_and_permissions.py  ddace48cf91d_first.py  (+21 more)
backend/hermadata/reports/: report_generator.py
backend/hermadata/reports/static/: old.css  tailwind.css
backend/hermadata/reports/templates/: adoption.jinja  animal_data.jinja  animal_entry.jinja  base.jinja  chip_assignment.jinja  custody.jinja  exit.jinja  variation.jinja
backend/hermadata/repositories/: __init__.py  activity_repository.py  adopter_repository.py  adoption_repository.py  animal.py  breed_repository.py  city.py  city_repository.py  document_repository.py  race.py  race_repository.py  structure_repository.py  user_repository.py  vet_repository.py
backend/hermadata/repositories/animal/: animal.py  animal_repository.py  models.py
backend/hermadata/routers/: adopter_router.py  adoption_router.py  animal.py  animal_router.py  breed_router.py  document_router.py  race.py  race_router.py  structure_router.py  user_router.py  util.py  util_router.py  vet_router.py
backend/hermadata/services/: adopter_service.py  animal_service.py  user_service.py
backend/hermadata/storage/: base.py  disk_storage.py  s3_storage.py
backend/scripts/: move_documents.py  render_report.py
backend/tests/: .env  alembic.ini  conftest.py  test_constants.py  test_db_session.py  test_error_handlers.py  test_errors.py  test_models.py  test_permissions.py  test_permissions_new.py  test_report_generator.py  test_utils.py  utils.py
backend/tests/repositories/: conftest.py  test_activity_repository.py  test_adopter_repository.py  test_adoption_repository.py  test_animal_repository.py  test_breed_repository.py  test_city_repository.py  test_dependancies.py  test_document_repository.py  test_get_repository.py  test_local_session.py  test_race_repository.py  test_structure_repository.py  test_user_repository.py  test_vet_repository.py
backend/tests/routers/: test_adopter_router.py  test_adoption_router.py  test_animal_router.py  test_breed_router.py  test_document_router.py  test_race_router.py  test_routes.py  test_structure_router.py  test_update_animal_entry.py  test_user_router.py  test_util_router.py  test_vet_router.py
backend/tests/services/: test_adopter_service.py  test_animal_entry_update_service.py  test_animal_service.py  test_user_service.py
(+169 files in other folders)
