[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "hermadata"
authors = [{ name = "Samuele Fusaro", email = "samuelevf@gmail.com" }]
requires-python = ">=3.12"
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "fastapi >= 0.104, < 1",
    "sqlalchemy >= 2, < 3",
    "pymysql >= 1.1, < 2",
    "alembic >= 1.12, < 2",
    "uvicorn",
    "pydantic >= 2.4, < 3",
    "cryptography",
    "python-multipart",
    "jinja2",
    "openpyxl",
    "boto3 >=1, < 2",
    "pydantic >= 2.9, <3",
    "pydantic-settings >= 2.6, <3",
    "weasyprint>=63.1",
]
[project.scripts]
import-doc-kinds = "hermadata.database.alembic.import_initial_data:import_doc_kinds"


[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "C", "I", "B"]
ignore = ["E402"]

[tool.ruff.format]
quote-style="double"

[tool.pytest.ini_options]
env =[
    "ENV_PATH=tests/.env"
]
[dependency-groups]
dev = [
    "httpx>=0.27.2",
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "pytest-dotenv>=0.5.2",
    "pytest-env>=1.1.5",
    "ruff>=0.9.6",
    "uv>=0.5.31",
]
